# sciencetalk-api

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.test  Justfile  LICENSE  README.md  alembic.ini  backend-requirements.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml  test.yml
deployment/local/: docker-compose.yml  local.just
deployment/prod/: .env.base  .gitignore  README.md  prod.just
deployment/prod/tf/: .gitignore  dns.tf  env_file.tf  iam_cicd.tf  lightsail.tf  lightsail_db.tf  main.tf  outputs.tf  secrets.tf  variables.tf
docs/: INTEGRATION_TESTING.md
migrations/: env.py
migrations/versions/: 22508ec55b22_drop_idx_votes_votable_index.py  7e9cd34a1b5a_add_slug_column_to_posts.py  8a050c997a86_initial_schema.py  b08ba9210f11_add_user_tree_indexes_and_seed_invites.py  e1878088eb82_seed_tags.py  f96f33be5177_replace_updated_at_with_content_and_.py
scripts/: env-to-json.sh  run-integration-tests.sh  run_migrations.py  start.sh  start_app.py
talk/: config.py
talk/adapter/: CLAUDE.md  error.py
talk/adapter/bluesky/: auth.py  dpop.py  identity.py  metadata.py  (+2 more)
talk/application/: CLAUDE.md
talk/domain/: CLAUDE.md  error.py
talk/interface/: CLAUDE.md  error.py
talk/persistence/: CLAUDE.md  database.py  mappers.py  tables.py
talk/util/: CLAUDE.md  error.py  jwt.py  logging.py  observability.py
tests/: CLAUDE.md  conftest.py  harness.py
tests/di/: __init__.py  bluesky.py  container.py  persistence.py  twitter.py
tests/e2e/: test_auth_flow.py  test_user_profile.py  test_user_tree.py
(+132 files in other folders)
